--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,16 +19,36 @@ layout: base
 </header>
 {% endif %}
 
-<div class="container" role="main">
-  <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{ content }}
-	    {% if page.comments %}
-        <div class="disqus-comments">
-	        {% include disqus.html %}
-        </div>
-	        {% include fb-comment.html %}
-	    {% endif %}
+<div class="row">
+  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    {% capture home-include %}{% include home.md %}{% endcapture %}
+    {{ home-include | markdownify }}
+
+    {% if site.posts.first %}
+    <h2>Recent News</h2>
+    <div class="posts-list">
+        <article class="post-preview">
+          <a href="{{ site.posts.first.url | prepend: site.baseurl }}">
+      	  <h3 class="post-subtitle">{{ site.posts.first.title }}</h2>
+          </a>
+
+          <p class="post-meta">
+            {{ site.posts.first.date | date: "%B %-d, %Y" }}
+          </p>
+
+          <div class="post-entry">
+            {{ site.posts.first.excerpt | strip_html | xml_escape}}
+      	  <a href="{{ "/news/" | prepend: site.baseurl }}" class="post-read-more"> Read&nbsp;more...</a>
+          </div>
+
+         </article>
     </div>
+    {% endif %}
+
+    {{ content }}
+	{% if page.comments %}
+    <div class="disqus-comments">
+	  {% include disqus.html %}
+    </div>
+	{% endif %}
   </div>
-</div>
